--- a/PubMed_200k_RCT.ipynb
+++ b/PubMed_200k_RCT.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMNpINlgzMBkupOR/9Mis4f",
+      "authorship_tag": "ABX9TyPlSHeSye4VpsL9mEhR3ZVX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,15 +48,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P8ecvlysqMzM",
-        "outputId": "303f9916-d87f-4317-9fe3-6d0b05cae47f"
+        "outputId": "5dbf0cd2-4f98-4fcc-81e6-8728725571d4"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fri Oct 14 13:42:01 2022       \n",
+            "Fri Oct 14 16:24:08 2022       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -109,15 +109,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jGdWoJxHvCOZ",
-        "outputId": "206f83b5-a2e0-47d0-96af-4d2c9427ab30"
+        "outputId": "d9ee4063-e2be-4cae-d53e-b0c633756962"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "fatal: destination path 'pubmed-rct' already exists and is not an empty directory.\n",
+            "Cloning into 'pubmed-rct'...\n",
+            "remote: Enumerating objects: 33, done.\u001b[K\n",
+            "remote: Counting objects: 100% (8/8), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (3/3), done.\u001b[K\n",
+            "remote: Total 33 (delta 5), reused 5 (delta 5), pack-reused 25\u001b[K\n",
+            "Unpacking objects: 100% (33/33), done.\n",
             "PubMed_200k_RCT\n",
             "PubMed_200k_RCT_numbers_replaced_with_at_sign\n",
             "PubMed_20k_RCT\n",
@@ -138,9 +143,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aRgfoMWLvJ2V",
-        "outputId": "eb88f63f-434b-4c4d-80a6-bd30e6f7dcd9"
+        "outputId": "3b7af8ca-e140-4a32-9988-ee186cf1e99d"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,7 +164,7 @@
       "metadata": {
         "id": "ApnkbJtevbut"
       },
-      "execution_count": 9,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -174,9 +179,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qLE9G2tCvqcn",
-        "outputId": "c7a2282a-44b3-4562-d21d-03a19b52957c"
+        "outputId": "21a0cc6e-88dd-44bc-cfd5-187b9c8578a7"
       },
-      "execution_count": 10,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -188,7 +193,157 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Preprocess data"
+      ],
+      "metadata": {
+        "id": "710iHvItv4QN"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_lines(filepath):\n",
+        "  \"\"\"\n",
+        "  open and return the files\n",
+        "  \"\"\"\n",
+        "  with open(filepath,\"r\") as f:\n",
+        "    return f.readlines()"
+      ],
+      "metadata": {
+        "id": "j4B7A2xnUIAm"
+      },
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_lines = get_lines(data_dir + \"train.txt\")\n",
+        "train_lines[:16]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k2ENOH8UUfDR",
+        "outputId": "88c417c6-1d52-495a-9a94-7802680dea70"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['###24293578\\n',\n",
+              " 'OBJECTIVE\\tTo investigate the efficacy of @ weeks of daily low-dose oral prednisolone in improving pain , mobility , and systemic low-grade inflammation in the short term and whether the effect would be sustained at @ weeks in older adults with moderate to severe knee osteoarthritis ( OA ) .\\n',\n",
+              " 'METHODS\\tA total of @ patients with primary knee OA were randomized @:@ ; @ received @ mg/day of prednisolone and @ received placebo for @ weeks .\\n',\n",
+              " 'METHODS\\tOutcome measures included pain reduction and improvement in function scores and systemic inflammation markers .\\n',\n",
+              " 'METHODS\\tPain was assessed using the visual analog pain scale ( @-@ mm ) .\\n',\n",
+              " 'METHODS\\tSecondary outcome measures included the Western Ontario and McMaster Universities Osteoarthritis Index scores , patient global assessment ( PGA ) of the severity of knee OA , and @-min walk distance ( @MWD ) .\\n',\n",
+              " 'METHODS\\tSerum levels of interleukin @ ( IL-@ ) , IL-@ , tumor necrosis factor ( TNF ) - , and high-sensitivity C-reactive protein ( hsCRP ) were measured .\\n',\n",
+              " 'RESULTS\\tThere was a clinically relevant reduction in the intervention group compared to the placebo group for knee pain , physical function , PGA , and @MWD at @ weeks .\\n',\n",
+              " 'RESULTS\\tThe mean difference between treatment arms ( @ % CI ) was @ ( @-@ @ ) , p < @ ; @ ( @-@ @ ) , p < @ ; @ ( @-@ @ ) , p < @ ; and @ ( @-@ @ ) , p < @ , respectively .\\n',\n",
+              " 'RESULTS\\tFurther , there was a clinically relevant reduction in the serum levels of IL-@ , IL-@ , TNF - , and hsCRP at @ weeks in the intervention group when compared to the placebo group .\\n',\n",
+              " 'RESULTS\\tThese differences remained significant at @ weeks .\\n',\n",
+              " 'RESULTS\\tThe Outcome Measures in Rheumatology Clinical Trials-Osteoarthritis Research Society International responder rate was @ % in the intervention group and @ % in the placebo group ( p < @ ) .\\n',\n",
+              " 'CONCLUSIONS\\tLow-dose oral prednisolone had both a short-term and a longer sustained effect resulting in less knee pain , better physical function , and attenuation of systemic inflammation in older patients with knee OA ( ClinicalTrials.gov identifier NCT@ ) .\\n',\n",
+              " '\\n',\n",
+              " '###24854809\\n',\n",
+              " 'BACKGROUND\\tEmotional eating is associated with overeating and the development of obesity .\\n']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def preprocess_with_line_numbers(filepath):\n",
+        "  \"\"\"\n",
+        "  Takes in filename, reads its contents and sorts through each line,\n",
+        "  extracting things like the target label, the text of the sentence,\n",
+        "  how many sentences are in the current abstract and what sentence number\n",
+        "  the target line is.\n",
+        "\n",
+        "  Args: \n",
+        "  \n",
+        "  filename: a string of the target path\n",
+        "  \"\"\"\n",
+        "  input_lines = get_lines(filepath)\n",
+        "  abstract_lines = \"\"\n",
+        "  abstract_samples = []\n",
+        "\n",
+        "  for line in input_lines:\n",
+        "    if line.startswith(\"###\") :\n",
+        "      abstract_id = line\n",
+        "      abstract_lines = \"\"\n",
+        "    elif line.isspace(): # check to see if its new line\n",
+        "      abstract_line_split = abstract_lines.splitlines() \n",
+        "\n",
+        "      for abstract_line_number, abstract_line in enumerate(abstract_line_split):\n",
+        "        line_data = {}\n",
+        "        target_text_split = abstract_line.split(\"\\t\")\n",
+        "        line_data[\"target\"] = target_text_split[0]\n",
+        "        line_data[\"text\"] = target_text_split[1].lower()\n",
+        "        line_data[\"line_number\"] = abstract_line_number \n",
+        "        line_data[\"total_lines\"] = len(abstract_line_split) - 1\n",
+        "        abstract_samples.append(line_data)\n",
+        "\n",
+        "    else:\n",
+        "      abstract_lines += line\n",
+        "\n",
+        "  return abstract_samples"
+      ],
+      "metadata": {
+        "id": "XnWGgOfyUuXy"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "train_samples = preprocess_with_line_numbers(data_dir+\"train.txt\")\n",
+        "val_samples = preprocess_with_line_numbers(data_dir+\"dev.txt\")\n",
+        "test_samples = preprocess_with_line_numbers(data_dir + \"test.txt\")\n",
+        "len(train_samples), len(val_samples), len(test_samples)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6xr9Ny5oa9FT",
+        "outputId": "ae3b3870-cc5b-4ccf-9aa0-10663388b818"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "CPU times: user 409 ms, sys: 70.4 ms, total: 479 ms\n",
+            "Wall time: 479 ms\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(180040, 30212, 30135)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
         }
       ]
     },
@@ -196,7 +351,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "710iHvItv4QN"
+        "id": "uERGCF0cbwnU"
       },
       "execution_count": null,
       "outputs": []
