Encode the data

--- a/PubMed_200k_RCT.ipynb
+++ b/PubMed_200k_RCT.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMrmzvWItriCPub4VzE9MPO",
+      "authorship_tag": "ABX9TyPt1uxd7Mmdo4IMjWh5xFYG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -793,10 +793,183 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## get list of sentences"
+      ],
+      "metadata": {
+        "id": "SzCuqMRumGYc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "When we build our deep learning model, one of its main inputs will be a list of strings (the lines of an abstract)."
+      ],
+      "metadata": {
+        "id": "qbr14mI4mKCa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_sentences = train_df[\"text\"].tolist()\n",
+        "val_sentences = val_df[\"text\"].tolist()\n",
+        "test_sentences = test_df[\"text\"].tolist()\n",
+        "train_sentences[:10]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wiSdwr-qjLv4",
+        "outputId": "3210aa55-cea6-49ff-d83f-8b0b898b69d3"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['to investigate the efficacy of @ weeks of daily low-dose oral prednisolone in improving pain , mobility , and systemic low-grade inflammation in the short term and whether the effect would be sustained at @ weeks in older adults with moderate to severe knee osteoarthritis ( oa ) .',\n",
+              " 'a total of @ patients with primary knee oa were randomized @:@ ; @ received @ mg/day of prednisolone and @ received placebo for @ weeks .',\n",
+              " 'outcome measures included pain reduction and improvement in function scores and systemic inflammation markers .',\n",
+              " 'pain was assessed using the visual analog pain scale ( @-@ mm ) .',\n",
+              " 'secondary outcome measures included the western ontario and mcmaster universities osteoarthritis index scores , patient global assessment ( pga ) of the severity of knee oa , and @-min walk distance ( @mwd ) .',\n",
+              " 'serum levels of interleukin @ ( il-@ ) , il-@ , tumor necrosis factor ( tnf ) - , and high-sensitivity c-reactive protein ( hscrp ) were measured .',\n",
+              " 'there was a clinically relevant reduction in the intervention group compared to the placebo group for knee pain , physical function , pga , and @mwd at @ weeks .',\n",
+              " 'the mean difference between treatment arms ( @ % ci ) was @ ( @-@ @ ) , p < @ ; @ ( @-@ @ ) , p < @ ; @ ( @-@ @ ) , p < @ ; and @ ( @-@ @ ) , p < @ , respectively .',\n",
+              " 'further , there was a clinically relevant reduction in the serum levels of il-@ , il-@ , tnf - , and hscrp at @ weeks in the intervention group when compared to the placebo group .',\n",
+              " 'these differences remained significant at @ weeks .']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## make labels numerical"
+      ],
+      "metadata": {
+        "id": "Mvu7em7gljjX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "one_hot_encoder = OneHotEncoder(sparse=False)\n",
+        "train_labels_one_hot = one_hot_encoder.fit_transform(train_df[\"target\"].to_numpy().reshape(-1,1))\n",
+        "val_labels_one_hot = one_hot_encoder.transform(val_df[\"target\"].to_numpy().reshape(-1,1))\n",
+        "test_labels_one_hot = one_hot_encoder.transform(test_df[\"target\"].to_numpy().reshape(-1,1))\n",
+        "\n",
+        "train_labels_one_hot"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "W5inazbOlzWC",
+        "outputId": "c504fd30-6fca-4ba2-83d7-e8763fbf303d"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 0., 0., 1., 0.],\n",
+              "       [0., 0., 1., 0., 0.],\n",
+              "       [0., 0., 1., 0., 0.],\n",
+              "       ...,\n",
+              "       [0., 0., 0., 0., 1.],\n",
+              "       [0., 1., 0., 0., 0.],\n",
+              "       [0., 1., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### label encodes labels"
+      ],
+      "metadata": {
+        "id": "XfEd9gJunaAz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "label_encoder = LabelEncoder()\n",
+        "train_labels_encoded = label_encoder.fit_transform(train_df[\"target\"].to_numpy())\n",
+        "val_labels_encoded = label_encoder.transform(val_df[\"target\"].to_numpy())\n",
+        "test_labels_encoded = label_encoder.transform(test_df[\"target\"].to_numpy())\n",
+        "\n",
+        "train_labels_encoded, train_labels_encoded.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OVUIrj_Hnr_I",
+        "outputId": "b3477586-76d8-42c4-c586-00a91938573b"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([3, 2, 2, ..., 4, 1, 1]), (180040,))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num_classes = len(label_encoder.classes_)\n",
+        "class_names = label_encoder.classes_\n",
+        "num_classes, class_names"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2dXJxGT6ovj4",
+        "outputId": "cf92b2ae-efc7-47ce-e2bc-946376663e3d"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(5, array(['BACKGROUND', 'CONCLUSIONS', 'METHODS', 'OBJECTIVE', 'RESULTS'],\n",
+              "       dtype=object))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "wiSdwr-qjLv4"
+        "id": "brPW_Y5XpIDJ"
       },
       "execution_count": null,
       "outputs": []
