Add baseline model

--- a/PubMed_200k_RCT.ipynb
+++ b/PubMed_200k_RCT.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPt1uxd7Mmdo4IMjWh5xFYG",
+      "authorship_tag": "ABX9TyMYutOY+YfS2iPHBzgT9Fn0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P8ecvlysqMzM",
-        "outputId": "82120e93-578a-4e25-fd11-cfe3a4c4bb27"
+        "outputId": "5a562fa8-429b-48ab-de95-852e13700f45"
       },
       "execution_count": 1,
       "outputs": [
@@ -56,7 +56,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Sat Oct 15 16:39:41 2022       \n",
+            "Sat Oct 15 20:36:50 2022       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 460.32.03    Driver Version: 460.32.03    CUDA Version: 11.2     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -65,7 +65,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   58C    P8    11W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
+            "| N/A   64C    P8    11W /  70W |      0MiB / 15109MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -109,7 +109,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jGdWoJxHvCOZ",
-        "outputId": "3342240f-5fcd-40d1-b228-451211a9df4f"
+        "outputId": "cbce0cca-868b-451c-db3b-6290ec91917f"
       },
       "execution_count": 2,
       "outputs": [
@@ -143,7 +143,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aRgfoMWLvJ2V",
-        "outputId": "e7307730-3317-4817-f332-aa4ea899765e"
+        "outputId": "cca70da4-18cf-4587-ac09-580552707fee"
       },
       "execution_count": 3,
       "outputs": [
@@ -179,7 +179,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qLE9G2tCvqcn",
-        "outputId": "4d3c064a-e2d6-4cf3-8b87-fea56ae8e882"
+        "outputId": "3bac6273-eca5-45dd-e990-ebd631016f8e"
       },
       "execution_count": 5,
       "outputs": [
@@ -233,7 +233,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "k2ENOH8UUfDR",
-        "outputId": "7d7c636a-ed76-4eec-9531-1f37e9d326ed"
+        "outputId": "e0a50209-aae3-40a7-99b9-c71991065fe0"
       },
       "execution_count": 7,
       "outputs": [
@@ -323,7 +323,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6xr9Ny5oa9FT",
-        "outputId": "15e93213-5595-4ed7-d773-0bc53740644f"
+        "outputId": "5c013d84-bfc5-4e07-abc2-f0a9b628a8c4"
       },
       "execution_count": 9,
       "outputs": [
@@ -331,8 +331,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "CPU times: user 467 ms, sys: 88.6 ms, total: 555 ms\n",
-            "Wall time: 561 ms\n"
+            "CPU times: user 417 ms, sys: 83.4 ms, total: 500 ms\n",
+            "Wall time: 501 ms\n"
           ]
         },
         {
@@ -357,7 +357,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f161a30b-cf47-49d9-cd3f-a0253b95e980"
+        "outputId": "4ca81884-9a64-461f-e4dd-1328a2628e13"
       },
       "execution_count": 10,
       "outputs": [
@@ -452,9 +452,9 @@
           "height": 551
         },
         "id": "LzG9_tO_hkHF",
-        "outputId": "a11dd826-307c-4e27-9d9c-ebb0c77a2b3c"
+        "outputId": "7aa72186-33ca-4ccf-ff39-580fae8f0c6a"
       },
-      "execution_count": 17,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -498,7 +498,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5c45a9b9-b0e6-412e-a366-aec319a32181\">\n",
+              "  <div id=\"df-9fa0bc37-e4d7-4040-a5e6-3bee5971f4ab\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -640,7 +640,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5c45a9b9-b0e6-412e-a366-aec319a32181')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9fa0bc37-e4d7-4040-a5e6-3bee5971f4ab')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -691,12 +691,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-5c45a9b9-b0e6-412e-a366-aec319a32181 button.colab-df-convert');\n",
+              "          document.querySelector('#df-9fa0bc37-e4d7-4040-a5e6-3bee5971f4ab button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-5c45a9b9-b0e6-412e-a366-aec319a32181');\n",
+              "          const element = document.querySelector('#df-9fa0bc37-e4d7-4040-a5e6-3bee5971f4ab');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -719,7 +719,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 11
         }
       ]
     },
@@ -733,9 +733,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v7iTZH1xh41Y",
-        "outputId": "08f86808-1d28-4f31-b487-8873a947226a"
+        "outputId": "ea9d64ff-4265-4900-bd76-cea5c7655b37"
       },
-      "execution_count": 16,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -750,7 +750,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 12
         }
       ]
     },
@@ -765,9 +765,9 @@
           "height": 267
         },
         "id": "BQ4q6QPPiJmy",
-        "outputId": "816324a9-9965-4b07-8721-c1c62654a2aa"
+        "outputId": "513d1c4e-a362-4d82-b081-9ce23a7205a4"
       },
-      "execution_count": 19,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -823,9 +823,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wiSdwr-qjLv4",
-        "outputId": "3210aa55-cea6-49ff-d83f-8b0b898b69d3"
+        "outputId": "5b3bd66c-c27a-47aa-8de8-89d38e517776"
       },
-      "execution_count": 20,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -844,7 +844,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 14
         }
       ]
     },
@@ -873,9 +873,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W5inazbOlzWC",
-        "outputId": "c504fd30-6fca-4ba2-83d7-e8763fbf303d"
+        "outputId": "983490fb-92e2-4b70-b9db-a9a445f1d09b"
       },
-      "execution_count": 24,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -891,7 +891,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 24
+          "execution_count": 15
         }
       ]
     },
@@ -920,9 +920,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OVUIrj_Hnr_I",
-        "outputId": "b3477586-76d8-42c4-c586-00a91938573b"
+        "outputId": "1c59ca6b-9482-498d-b5dc-128dc8103908"
       },
-      "execution_count": 26,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -932,7 +932,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 16
         }
       ]
     },
@@ -948,9 +948,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2dXJxGT6ovj4",
-        "outputId": "cf92b2ae-efc7-47ce-e2bc-946376663e3d"
+        "outputId": "34d21f5f-79fb-4665-fbbf-758b890181e3"
       },
-      "execution_count": 27,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -961,7 +961,184 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Baseline model"
+      ],
+      "metadata": {
+        "id": "brPW_Y5XpIDJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.naive_bayes import MultinomialNB\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "\n",
+        "model_0 = Pipeline([\n",
+        "    (\"TfidfVectorizer\", TfidfVectorizer()),\n",
+        "    (\"gaussianNB\", MultinomialNB())\n",
+        "])\n",
+        "\n",
+        "model_0.fit(train_sentences, train_labels_encoded)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UUOnaL9CXais",
+        "outputId": "2cb8a87a-f2a1-4d44-fe27-80da3af74374"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Pipeline(steps=[('TfidfVectorizer', TfidfVectorizer()),\n",
+              "                ('gaussianNB', MultinomialNB())])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_0.score(val_sentences, val_labels_encoded)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VTDfYC5rYPk8",
+        "outputId": "f070fd00-4a0b-4c71-9cd5-cf8016bf3fa8"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7218323844829869"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "baseline_preds = model_0.predict(test_sentences)\n",
+        "baseline_preds"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iJ9Zqt3ZY-jf",
+        "outputId": "57502020-81d7-4e80-cdf6-ed0ab1b741df"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2, 2, 2, ..., 4, 4, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Evaluate using :\n",
+        "\n",
+        "* Accuracy\n",
+        "* Percision\n",
+        "* Recall\n",
+        "* F1-score"
+      ],
+      "metadata": {
+        "id": "YnaFsdk5ZLCw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# download helper function\n",
+        "!wget https://raw.githubusercontent.com/AmirGhnbr/Big-Food-Vision/main/helper.py"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WkFcSpPzbK1f",
+        "outputId": "47d3916e-17b7-474e-b99b-72a39f7e67bb"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2022-10-15 20:57:17--  https://raw.githubusercontent.com/AmirGhnbr/Big-Food-Vision/main/helper.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 10568 (10K) [text/plain]\n",
+            "Saving to: ‘helper.py’\n",
+            "\n",
+            "helper.py           100%[===================>]  10.32K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2022-10-15 20:57:17 (64.9 MB/s) - ‘helper.py’ saved [10568/10568]\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from helper import calculate_results\n",
+        "calculate_results(test_labels_encoded,\n",
+        "                  baseline_preds) "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OGN_ZgDYb9Gq",
+        "outputId": "b7930e85-7cec-4368-d7a1-a0d58e08563d"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 71.6674962667994,\n",
+              " 'precision': 0.7124322482375202,\n",
+              " 'recall': 0.716674962667994,\n",
+              " 'f1': 0.6925101703856846}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
         }
       ]
     },
@@ -969,7 +1146,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "brPW_Y5XpIDJ"
+        "id": "vzR2-JGLcVPG"
       },
       "execution_count": null,
       "outputs": []
